manifests/zulip/httproute-zulip.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zulip
  namespace: zulip
spec:
  hostnames:
    - zulip.the-one.k8s
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: zulip
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
